--- a/assets/theme.css
+++ b/assets/theme.css
@@ -60,3 +60,9 @@ h6 {
 .title-font {
   font-family: "Playfair Display";
 }
+
+.section-container {
+  padding: 0 48px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
