--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="" <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
+  <link rel="stylesheet" href="{{ 'mobile.css' | asset_url }}" media="(max-width: 768px)">
+  <link rel="stylesheet" href="{{ 'cart-sidepanel.css' | asset_url }}"
+  >n">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,6 +67,17 @@
     <script src="{{ 'theme.js' | asset_url }}" async></script>
     <script src="{{ 'predictive-search.js' | asset_url }}" defer></script>
 
+    <!-- Shopify Global Variables -->
+    <script>
+      window.Shopify = window.Shopify || {};
+      window.Shopify.currency = {
+        active: '{{ cart.currency.iso_code }}',
+        rate: '{{ cart.currency.rate }}',
+      };
+      window.Shopify.locale = '{{ request.locale.iso_code }}';
+      window.Shopify.country = '{{ localization.country.iso_code }}';
+    </script>
+
     {% render 'schemas' %}
     {% render 'social-meta-tags' %}
     {{ content_for_header }}
@@ -71,6 +85,7 @@
 
   <body>
     {% sections 'header-group' %}
+    {% render 'cart.sidepanel' %}
 
     <div id="smooth-wrapper">
       <div id="smooth-content">
@@ -84,12 +99,13 @@
           {{ content_for_layout }}
         </main>
 
-        {% sections 'footer-group' %}
+        {% section 'footer' %}
       </div>
     </div>
 
     <script src="{{ 'scroll-animations.js' | asset_url }}" defer></script>
     <script src="{{ 'cart.js' | asset_url }}" defer></script>
+    <script src="{{ 'cart-sidepanel.js' | asset_url }}" defer></script>
     <script src="{{ 'product-carousel.js' | asset_url }}" defer></script>
   </body>
 </html>
